Add backgrounds, character names, character portraits, and Vriska.

--- a/index.html
+++ b/index.html
@@ -18,19 +18,30 @@
         </div>
       </summary></details>
       <details class="d2"><summary class="sum2">
+        <div class="profile">
+          <div class="name">Character</div>
+        </div>
         <div>
-          <span class="dummy">Continuing to test.</span>
-          <span class="s2 dialogue">Continuing to test.</span>
+          <span class="dummy">This dialogue is spoken by a character!</span>
+          <span class="s2 dialogue">This dialogue is spoken by a character!</span>
         </div>
       </summary></details>
       <details class="d3"><summary class="sum3">
-        <div>
-          <span class="dummy">Let's try something a little more interesting, okay?</span>
-          <span class="s3 line1 dialogue">Let's try something a little more interesting, okay?</span>
+        <div class="profile vriska">
+          <div class="portrait"></div>
+          <div class="name">Vriska</div>
         </div>
         <div>
-          <span class="dummy">This box has two rows of dialogue!</span>
-          <span class="s3 line2 dialogue">This box has two rows of dialogue!</span>
+          <span class="dummy">Get Vriska jumpscared, idiot!!!!!!!!</span>
+          <span class="s3 line1 dialogue">Get Vriska jumpscared, idiot!!!!!!!!</span>
+        </div>
+        <div>
+          <span class="dummy">Bet you thought you'd have to w8 a bit longer for</span>
+          <span class="s3 line2 dialogue">Bet you thought you'd have to w8 a bit longer for</span>
+        </div>
+        <div>
+          <span class="dummy">chatsprites!</span>
+          <span class="s3 line3 dialogue">chatsprites!</span>
         </div>
       </summary></details>
     </div>
