Change functionality to depend on open/closed status of detail elements to improve persistence.

--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Click the button below to start. Advance the scene using the TAB key.</p>
-    <details class="d0"><summary class="sum0">Start</summary></details>
+    <p>Advance the scene by clicking.</p>
     <div class="scene">
+      <details class="d0"><summary class="sum0 start">Click to start!</summary></details>
       <details class="d1"><summary class="sum1">
-        <div>
-          <span class="dummy">Testing...</span>
-          <span class="s1 dialogue">Testing...</span>
+        <div class="dialogbox">
+          <div class="textrow">
+            <span class="dummy">Testing...</span>
+            <span class="s1 dialogue">Testing...</span>
+          </div>
         </div>
       </summary></details>
       <details class="d2"><summary class="sum2">
         <div class="profile">
           <div class="name">Character</div>
         </div>
-        <div>
-          <span class="dummy">This dialogue is spoken by a character!</span>
-          <span class="s2 dialogue">This dialogue is spoken by a character!</span>
+        <div class="dialogbox">
+          <div class="textrow">
+            <span class="dummy">This dialogue is spoken by a character!</span>
+            <span class="s2 dialogue">This dialogue is spoken by a character!</span>
+          </div>
         </div>
       </summary></details>
       <details class="d3"><summary class="sum3">
@@ -31,17 +35,19 @@
           <div class="portrait"></div>
           <div class="name">Vriska</div>
         </div>
-        <div>
-          <span class="dummy">Get Vriska jumpscared, idiot!!!!!!!!</span>
-          <span class="s3 line1 dialogue">Get Vriska jumpscared, idiot!!!!!!!!</span>
-        </div>
-        <div>
-          <span class="dummy">Bet you thought you'd have to w8 a bit longer for</span>
-          <span class="s3 line2 dialogue">Bet you thought you'd have to w8 a bit longer for</span>
-        </div>
-        <div>
-          <span class="dummy">chatsprites!</span>
-          <span class="s3 line3 dialogue">chatsprites!</span>
+        <div class="dialogbox">
+          <div class="textrow">
+            <span class="dummy">Get Vriska jumpscared, idiot!!!!!!!!</span>
+            <span class="s3 line1 dialogue">Get Vriska jumpscared, idiot!!!!!!!!</span>
+          </div>
+          <div class="textrow">
+            <span class="dummy">Bet you thought you'd have to w8 a bit longer for</span>
+            <span class="s3 line2 dialogue">Bet you thought you'd have to w8 a bit longer for</span>
+          </div>
+          <div class="textrow">
+            <span class="dummy">chatsprites!</span>
+            <span class="s3 line3 dialogue">chatsprites!</span>
+          </div>
         </div>
       </summary></details>
     </div>
