--- a/index.html
+++ b/index.html
@@ -41,12 +41,8 @@
             <span class="s3 line1 dialogue">Get Vriska jumpscared, idiot!!!!!!!!</span>
           </div>
           <div class="textrow">
-            <span class="dummy">Bet you thought you'd have to w8 a bit longer for</span>
-            <span class="s3 line2 dialogue">Bet you thought you'd have to w8 a bit longer for</span>
-          </div>
-          <div class="textrow">
-            <span class="dummy">chatsprites!</span>
-            <span class="s3 line3 dialogue">chatsprites!</span>
+            <span class="dummy">Chatsprites are here AND anim8ed!</span>
+            <span class="s3 line2 dialogue">Chatsprites are here AND anim8ed!</span>
           </div>
         </div>
       </summary></details>
